mpri242/test/bad/expected1.f
(* Expected an arrow type, got a universal. *)
program
let identity [ a ] (x : a) : a = x in
identity identity
